--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -30,7 +30,7 @@ img, video, iframe {
 header {
     max-width: 80%;
     margin: 0 auto;
-    background-image: url(/assets/img/bg.jpg);
+    background-image: url(/assets/img/yourname.jpg);
     background-size: cover;
     color: rgba(255, 255, 255, .75);
 }
@@ -47,6 +47,7 @@ header {
 }
 
 .site-description {
+    padding: 7rem;
     font-family: "League Gothic", "Arial Narrow", Arial, sans-serif;
     text-align: center;
 }
