--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,9 +3,9 @@
         <!-- logo and description -->
         {% if page.layout != "post" %}
         <div class="head-area">
-            <h1 class="site-logo">
+            <!-- <h1 class="site-logo">
                 <a href="/"><img src="/assets/img/logo.png" class="logo"/></a>
-            </h1>
+            </h1> -->
             <h3 class="site-description">{{ site.description }}</h3>
         </div>
         {% endif %}
@@ -30,10 +30,7 @@
                             </div>
                         </div>
 
-                        <a class="item" href="http://stallman.org/facebook.html">
-                            <i class="facebook link icon"></i>
-                        </a>
-                        <a class="item" href="https://github.com/abhn">
+                        <a class="item" href="https://github.com/eraserrr">
                             <i class="github link icon"></i>
                         </a>
                         <a class="item" href="/feed.xml">Subscribe</a>
