chore: Fix texts and css

--- a/_includes/author.html
+++ b/_includes/author.html
@@ -8,7 +8,7 @@
             <div class="content">
                 <a class="header">eraserrr</a>
                 <div class="description">
-                    <p>아침형/계획형이 되고싶은 게으른/즉흥형 인간입니다</p>
+                    <p>계획형 인간이 되고싶은 즉흥형 인간</p>
                 </div>
             </div>
         </div>
