--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,14 +1,16 @@
 <div class="header-wrapper">
     <header>
         <!-- logo and description -->
-        {% if page.layout != "post" %}
+        <!-- {% if page.layout != "post" %} -->
+        <a class="site-title" href="/">
         <div class="head-area">
             <!-- <h1 class="site-logo">
                 <a href="/"><img src="/assets/img/logo.png" class="logo"/></a>
             </h1> -->
-            <h3 class="site-description">{{ site.description }}</h3>
+            <h3 class="site-description">{{ site.title }}</h3>
         </div>
-        {% endif %}
+        </a>
+        <!-- {% endif %} -->
         <nav class="site-nav">
             <div class="left-nav">
                 <!-- add titles to all buttons -->
@@ -23,17 +25,16 @@
                         Archive
                     </a>
                     <div class="right menu">
-                        <div id="head-search" class="ui category search item">
+                        <!-- <div id="head-search" class="ui category search item">
                             <div class="ui transparent icon input">
                                 <input placeholder="Search..." type="text" id="search-input" onkeypress="handleKeyPress()">
                                 <i class="search link icon" onclick="handleSubmit()"></i>
                             </div>
-                        </div>
+                        </div> -->
 
                         <a class="item" href="https://github.com/eraserrr">
                             <i class="github link icon"></i>
                         </a>
-                        <a class="item" href="/feed.xml">Subscribe</a>
                     </div>
                 </div>
             </div>
