feat: Add category and update css

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -18,11 +18,17 @@
                     <a class="item" href="/">
                         Home
                     </a>
-                    <a class="item" href="/about.html">
-                        About
+                    <a class="item" href="/profile.html">
+                        Profile
                     </a>
-                    <a class="item" href="/archive.html">
-                        Archive
+                    <a class="item" href="/daily.html">
+                        Daily
+                    </a>
+                    <a class="item" href="/algorithm.html">
+                        Algorithm
+                    </a>
+                    <a class="item" href="/java.html">
+                        Java
                     </a>
                     <div class="right menu">
                         <!-- <div id="head-search" class="ui category search item">
