--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,7 +7,7 @@ layout: default
         <span class="date">
             {{ page.date | date_to_string }} 
             {% if page.category %} 
-                in <i>{{ page.categories }}</i>
+                in <i>{{ page.category }}</i>
             {% endif %} 
         </span>
         <h1 class="post-title">{{ page.title }}</h1>
