--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,16 +1,16 @@
 <footer>
     <div class="footer-wrapper">
         <div class="ui secondary menu inverted">
-            <p class="item">eraserrr &copy; 2017</p>
+            <p class="item">eraserrr &copy;2021</p>
             <div class="right menu">
                 <a class="item" href="/archive.html">
                     Latest Posts
                 </a>
-                <a class="item" href="https://twitter.com/fsf">
-                    Twitter
-                </a>
-                <a class="item" href="https://github.com/abhn">
+                <a class="item" href="https://github.com/eraserrr">
                     Github
+                </a>
+                <a class="item" href="https://www.instagram.com/bagjiu2548/">
+                    Instagram
                 </a>
             </div>
         </div>
