--- a/_includes/header.html
+++ b/_includes/header.html
@@ -41,6 +41,9 @@
                         <a class="item" href="https://github.com/eraserrr">
                             <i class="github link icon"></i>
                         </a>
+                        <a class="item" href="https://www.instagram.com/bagjiu2548/">
+                            <i class="instagram link icon"></i>
+                        </a>
                     </div>
                 </div>
             </div>
